# tinylearn

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml  justfile  release.yml
src/: bfgs.rs  lib.rs  lm.rs
src/lm/: logistic.rs  mod.rs
src/scripts/: release.sh
tests/: basic.csv  basic.py  lm.rs  test_lm.rs  test_logistic.rs
