[package]
name = "wsk"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = "0.5.1"
ndarray = { version = "0.16.1", default-features = false, features = ["approx", "serde"] }
serde = "1.0"
tracing = "0.1.41"
libc = { version = "0.2.155", default-features = false }
faer = { git = "https://github.com/sarah-quinones/faer-rs", default-features = false }
faer-ext = { version = "0.5.0", features = ["ndarray"] }

[dev-dependencies]
csv = "1.3"
tracing-subscriber = "0.3.19"
