[package]
name = "tinylearn"
description = "Machine learning in WebAssembly and no_std environments"
version = "0.1.0"
edition = "2021"
documentation = "https://docs.rs/tinylearn"
repository = "https://github.com/tinylearnrs/tinylearn"
keywords = ["machine-learning", "algorithms", "no_std"]
categories = ["science", "mathematics", "algorithms", "wasm"]
license = "BSD-3-Clause"

[dependencies]
approx = "0.5.1"
argmin = { version = "0.10", default-features = false }
# This one loads random by default.
argmin-math = { version = "*", features = ["ndarray_latest-nolinalg"], default-features = false }
# faer = { git = "https://github.com/sarah-ek/faer-rs", default-features = false }
faer = { version = "0.21.9", default-features = false }
faer-ext = { version = "0.5.0", features = ["ndarray"] }
libc = { version = "0.2.155", default-features = false }
ndarray = { version = "0.16.1", default-features = false, features = ["approx", "serde"] }
serde = "1.0"
thiserror = { version = "2.0.12", default-features = false }
tracing = "0.1.41"

[dev-dependencies]
csv = "1.3"
tracing-subscriber = "0.3.19"
